--- a/css/index.css
+++ b/css/index.css
@@ -15,5 +15,19 @@ time, mark, audio, video {
 	font-family: century gothic;
 	vertical-align: baseline;
 	-webkit-font-smoothing:antialiased;
+	border: 0;
+	margin: 0;
+	padding: 0;
 }
 
+#background{
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: -10;
+}
+
+#title{
+	text-align: center;
+	margin-top: 200px;
+}
