--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 /* YOUR CUSTOM STYLES */
 
 .translucent{
-	background-color: rgba(64,81,180, 0.8);
+	background-color: rgba(64,81,180, 0.75);
+}
+
+.logo{
+	height: 30px;
 }
