added gradient filter

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,18 @@
 	background-color: rgba(64,81,180, 0.75);
 }
 
+.full-bg-img{
+	background: -webkit-linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0));
+    background-color: rgba(0,0,0,0) !important
+}
+
 .logo{
 	height: 30px;
+}
+
+.whitetext{
+	color: #eee;
 }
