--- a/css/map.css
+++ b/css/map.css
@@ -1,12 +1,8 @@
-body {
-    font-family: 'Montserrat', sans-serif;
-}
-h1{
-    text-transform: uppercase; letter-spacing: 0.06em; margin-bottom: 40px;
-}
-
 #map {
-    width: 100%; height: 400px; margin-top: 40px; margin-bottom: 40px;
+    width: 100%;
+    height: 400px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .info-window {
