--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 /* YOUR CUSTOM STYLES */
 
+p{
+	font-size: 18px;
+}
+
 .translucent{
 	background-color: rgba(64,81,180, 0.75);
 }
@@ -37,12 +41,12 @@
 .more-link{
 	margin-right: 90px;
 }
-.more-link-2{
-	
+
+.about-us-table{
+	margin: 0 auto;
 }
 
-/*.avatar{
-	background: url(http://vis.cs.ucl.ac.uk/fileadmin/_processed_/9/a/csm_alexander_5d2d2da664.jpg) 50% 50% no-repeat;
-	width: 120px;
-	margin-top: 20px !important;
-}*/
+.about-us-table tr td{
+	font-size: 20px;
+	padding: 6px 10px;
+}
