--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ p {
 	font-size: 18px;
 }
 
+.outline{
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 .translucent{
 	background-color: rgba(64,81,180, 0.75);
 }
